--- a/fpl-server/package.json
+++ b/fpl-server/package.json
@@ -24,5 +24,6 @@
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
-  }
+  },
+  "proxy" : "http://localhost:4000" 
 }
