--- a/fpl-server/package.json
+++ b/fpl-server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   },
@@ -25,5 +26,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
-  "proxy" : "http://localhost:4000" 
+  "proxy": "http://localhost:4000"
 }
